Correct different size on search field on IE

--- a/src/css/natural-gallery.css
+++ b/src/css/natural-gallery.css
@@ -143,6 +143,7 @@
     padding: 9px 5px 6px;
     font-size: 16px;
     line-height: 1.3em;
+    height:35px;
 }
 
 .natural-gallery .natural-gallery-images {
